developers-house/website/website/src/transitions.css
* {
    transition: background 300ms;
}
body {
    font-family: 'Roboto', sans-serif;
    color: white;
    background: rgb(40, 40, 40);
    text-decoration: none;
    padding: 0;
    margin: 0;
    overflow: hidden;
}

a {
    text-decoration: none;
    color: white;
}

button {
    outline: none;
    border: none;
    cursor: pointer;
}

